tests/baselines/reference/letInConstDeclarations_ES6.errors.txt
tests/cases/compiler/letInConstDeclarations_ES6.ts(2,15): error TS2480: 'let' is not allowed to be used as a name in 'let' or 'const' declarations.
tests/cases/compiler/letInConstDeclarations_ES6.ts(5,19): error TS2480: 'let' is not allowed to be used as a name in 'let' or 'const' declarations.


==== tests/cases/compiler/letInConstDeclarations_ES6.ts (2 errors) ====
    // All use of let in const declaration should be an error
    const x = 50, let = 5;
                  ~~~
!!! error TS2480: 'let' is not allowed to be used as a name in 'let' or 'const' declarations.
    
    {
        const x = 10, let = 20;
                      ~~~
!!! error TS2480: 'let' is not allowed to be used as a name in 'let' or 'const' declarations.
    }